healthcare/ich_segmentation/dars/K8s/manifests/statefulset-worker.yaml
apiVersion: apps/v1 # use apps/v1beta1 for versions before 1.9.0
kind: StatefulSet
metadata:
  name: spark-dars-worker
  labels:
    app.kubernetes.io/name: spark
    app.kubernetes.io/instance: v1.0
    app.kubernetes.io/managed-by: v1
    app.kubernetes.io/component: worker
    component: statefulset
spec:
  serviceName: dars-headless-svc
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: spark
      app.kubernetes.io/instance: v1.0
      app.kubernetes.io/component: worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spark
        app.kubernetes.io/instance: v1.0
        app.kubernetes.io/component: worker
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: spark-worker
          image: STACKIMAGE
          imagePullPolicy: IfNotPresent
          command:
           - "/bin/bash"
           - "/tmp/config/bootstrap.sh"
           - "-d"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: cluster
              containerPort: 7077
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          volumeMounts:
            - name: setup-files-configmap
              mountPath: /tmp/config
      volumes:
        - name: setup-files-configmap
          configMap:
            name: setup-files-configmap
