healthcare/ich_segmentation/dars/K8s/manifests/hdfs-dn-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hdfs-dn
  labels:
    component: hdfs-dn
spec:
  ports:
  - name: dfs
    port: 9000
    protocol: TCP
  # *.hdfs-dn.yarn-cluster.svc.cluster.local
  clusterIP: None
  selector:
    component: hdfs-dn
