healthcare/ich_segmentation/dars/K8s/manifests/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dars-headless-svc
  labels:
    app.kubernetes.io/name: spark
    app.kubernetes.io/instance: v1.0
    app.kubernetes.io/managed-by: v1
    component: service
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: spark
    release: v1.0
