healthcare/ich_segmentation/dars/K8s/manifests/svc-master.yaml
apiVersion: v1
kind: Service
metadata:
  name: dars-master-svc
  labels:
    app.kubernetes.io/name: spark
    app.kubernetes.io/instance: v1.0
    app.kubernetes.io/managed-by: v1
    component: service
spec:
  type: ClusterIP
  ports:
  - port: 7077
    targetPort: cluster
    name: cluster
  - port: 80
    targetPort: http
    name: http
    protocol: TCP
  selector:
    app.kubernetes.io/name: spark
    app.kubernetes.io/instance: v1.0
    app.kubernetes.io/component: master
